# docker-registry-explorer

./: Cargo.toml  Dockerfile
.github/workflows/: main.yml
.zed/: tasks.json
src/: auth.rs  common.rs  error.rs  home.rs  image.rs  main.rs  registry.rs  router.rs
static/css/: main.css
static/js/: clipboard.js
